@@ -362,8 +362,10 @@ void *demux_mpc_init_plugin (xine_t *xine, void *data) {
   this->demux_class.open_plugin     = open_plugin;
   this->demux_class.description     = N_("Musepack demux plugin");
   this->demux_class.identifier      = "Musepack";
-  this->demux_class.mimetypes       = NULL;
-  this->demux_class.extensions      = "mpc mp+";
+  this->demux_class.mimetypes       =
+         "audio/musepack: mpc, mp+, mpp: Musepack audio;"
+         "audio/x-musepack: mpc, mp+, mpp: Musepack audio;";
+  this->demux_class.extensions      = "mpc mp+ mpp";
   this->demux_class.dispose         = default_demux_class_dispose;
 
   return this;
