@@ -71,6 +71,8 @@ xine-lib (1.1.12.1) 2008-??-??
       via an NSF file with a long title or copyright message. (CVE-2008-1878)
     - For extra safety against possible Integer overflows like the ones found
       in CVE-2008-1482, backport more calloc usage from 1.2 branch.
+  * Added MIME types and .mpp for musepack.
+  * Fixed display of some MJPEG streams (YUVJ420P).
 
 xine-lib (1.1.12) 2008-04-14
   * Security fixes:
